Aggiunti elementi e modificata grarfica

--- a/src/assets/scss/_partial/_variables.scss
+++ b/src/assets/scss/_partial/_variables.scss
@@ -10,6 +10,7 @@ $card-text: #9fa6b0;
 $card-tag-bg: #373f4a;
 $card-text-discount: #96c612;
 $card-bg-bg-discount: #577e11;
+$card-bg-discount-price:#373f4a;
 
 $footer-background: #171a21;
 $footer-text: #c3c2bd;
